# photo-scanner-rust

./: Cargo.toml  README.md
src/: main.rs
src/domain/: ports.rs
src/outbound/: exif.rs  image_provider.rs  mod.rs  openai.rs  xmp.rs
